# UriSolutionsCode

./: CMakeLists.txt  README.md
Solved/: 1000.cpp  1001.cpp  1002.cpp  1003.cpp  1004.cpp  1005.cpp  1006.cpp  1007.cpp  1008.cpp  1009.cpp  1010.cpp  1011.cpp  1012.cpp  1013.cpp  1014.cpp  1015.cpp  1016.cpp  1017.cpp  1018.cpp  1019.cpp  1020.cpp
UriSolutions/: CMakeLists.txt  UriSolutions.cpp  UriSolutions.h
